syntax="proto3";

package user;

option go_package="/userpb";


message user{
    string fname=1;
    string city=2;
    int64 phone=3;
    float height=4;
    bool is_married=5;
}

message createUserRequest{
    user details=1;
}

message createUserResponse{
    string message=1;
    int64 userID=2;
}

message getUserDetailsByIDRequest{
    int64 ID=1;
}

message getUserDetailsByIDResponse{
    user details=1;
}


service userServices{
    rpc CreateUser (createUserRequest) returns (createUserResponse);
    rpc GetUserDetail (getUserDetailsByIDRequest) returns (getUserDetailsByIDResponse);
    rpc GetDetailsOfListOfUsers (stream getUserDetailsByIDRequest) returns (stream getUserDetailsByIDResponse);
}

